@@ -24,17 +24,14 @@
  */
 package co.elastic.apm.agent.impl.payload;
 
-import org.junit.Rule;
-import org.junit.contrib.java.lang.system.EnvironmentVariables;
 import org.junit.jupiter.api.Test;
 
 import javax.annotation.Nullable;
 
+import static com.github.stefanbirkner.systemlambda.SystemLambda.withEnvironmentVariable;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class ContainerInfoTest {
-    @Rule
-    public final EnvironmentVariables environmentVariables = new EnvironmentVariables();
 
     @Test
     void testContainerIdParsing() {
@@ -126,7 +123,7 @@ public class ContainerInfoTest {
     }
 
     @Test
-    void testKubernetesDownwardApi() {
+    void testKubernetesDownwardApi() throws Exception {
         String line = "1:name=systemd:/kubepods/besteffort/pode9b90526-f47d-11e8-b2a5-080027b9f4fb/15aa6e53-b09a-40c7-8558-c6c31e36c88a";
         String containerId = "15aa6e53-b09a-40c7-8558-c6c31e36c88a";
         SystemInfo systemInfo = assertContainerId(line, containerId);
@@ -139,21 +136,23 @@ public class ContainerInfoTest {
         String podName = "downward-api-pod-name";
         String nodeName = "downward-api-node-name";
         String namespace = "downward-api-namespace";
-        environmentVariables.set("KUBERNETES_NODE_NAME", nodeName);
-        environmentVariables.set("KUBERNETES_POD_NAME", podName);
-        environmentVariables.set("KUBERNETES_NAMESPACE", namespace);
-        environmentVariables.set("KUBERNETES_POD_UID", podUid);
-        systemInfo.findContainerDetails();
+        withEnvironmentVariable("KUBERNETES_NODE_NAME", nodeName)
+            .and("KUBERNETES_POD_NAME", podName)
+            .and("KUBERNETES_NAMESPACE", namespace)
+            .and("KUBERNETES_POD_UID", podUid)
+            .execute(systemInfo::findContainerDetails);
         assertKubernetesInfo(systemInfo, podUid, podName, nodeName, namespace);
 
         // test partial settings
         systemInfo = assertContainerId(line, containerId);
         assertKubernetesInfo(systemInfo, originalPodUid, hostName, null, null);
-        environmentVariables.clear("KUBERNETES_POD_UID", "KUBERNETES_POD_NAME");
+        withEnvironmentVariable("KUBERNETES_NODE_NAME", nodeName)
+            .and("KUBERNETES_POD_NAME", null)
+            .and("KUBERNETES_NAMESPACE", namespace)
+            .and("KUBERNETES_POD_UID", null)
+            .execute(systemInfo::findContainerDetails);
         systemInfo.findContainerDetails();
         assertKubernetesInfo(systemInfo, originalPodUid, hostName, nodeName, namespace);
-
-        environmentVariables.clear("KUBERNETES_NAMESPACE", "KUBERNETES_NODE_NAME");
     }
 
     private SystemInfo createSystemInfo() {
